Using CQLSH to display column type; fixed linebreaks in title; updated .gitignore

--- a/src/AppBundle/Resources/views/columns/index.html.twig
+++ b/src/AppBundle/Resources/views/columns/index.html.twig
@@ -25,6 +25,7 @@
                         <thead>
                         <tr>
                             <th>Column</th>
+                            <th>Data type</th>
                             <th>Index</th>
                             <th>Index name</th>
                             <th>Index options</th>
@@ -39,6 +40,7 @@
                                 <td>
                                     {{ column.column_name }}
                                 </td>
+                                <td>{{ column.data_type }}</td>
                                 <td>{{ column.component_index }}</td>
                                 <td>{{ column.index_name }}</td>
                                 <td>{{ column.index_options }}</td>
