--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,10 +6,9 @@
     {% set keyspace = app.request.get('keyspace') %}
     {% set columnFamily = app.request.get('columnFamily') %}
     <title>
-        {% block title %}CasMin{% endblock %}
-        {{ cluster ? ' - ' ~ cluster }}
-        {{ keyspace ? ' - ' ~ keyspace }}
-        {{ columnFamily ? ' - ' ~ columnFamily }}
+        {% block title %}
+        CasMin{{ cluster ? ' - ' ~ cluster }}{{ keyspace ? ' - ' ~ keyspace }}{{ columnFamily ? ' - ' ~ columnFamily }}
+        {% endblock %}
     </title>
     {% block stylesheets %}
         <link rel="stylesheet" href="{{ asset('assets/vendor/bootstrap/dist/css/bootstrap.min.css') }}" />
