--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -1,3 +1,12 @@
 #addColumnFamilyModal ul.nav-tabs {
     margin-bottom: 15px;
 }
+
+pre#executeOutput {
+    font-size: 9pt;
+}
+
+textarea.executeCommand {
+    min-height: 240px;
+    font-size: 10pt;
+}
