Fix missing columnFamily bug

--- a/src/AppBundle/Resources/views/columns/index.html.twig
+++ b/src/AppBundle/Resources/views/columns/index.html.twig
@@ -108,7 +108,7 @@
 
                                 <input type="hidden" name="cluster" value="{{ app.request.get('cluster') }}">
                                 <input type="hidden" name="keyspace" value="{{ app.request.get('keyspace') }}">
-                                <input type="hidden" name="columnFamily" value="{{ app.request.get('columnFamily') }}">
+                                <input type="hidden" name="columnFamily" value="{{ app.request.get('columnfamily') }}">
                             </form>
                         </div>
                         <div class="modal-footer">
