--- a/src/AppBundle/Resources/views/clusters/index.html.twig
+++ b/src/AppBundle/Resources/views/clusters/index.html.twig
@@ -7,7 +7,7 @@
             {% for cluster in clusters %}
                 <li class="list-group-item">
                     {% set clusterSplit = cluster|split(':') %}
-                    <h4>{{ clusterSplit[0] }} : {{ clusterSplit[1] }} <small>v{{ clusterSplit[2] }}</small></h4>
+                    <h4>{{ clusterSplit[0] }}:{{ clusterSplit[1] }} {{ (clusterSplit|length) > 3 ? ("<strong>" ~ clusterSplit[3] ~ "</strong>")|raw }} <small>v{{ clusterSplit[2] }}</small></h4>
                     <hr />
                     <div class="btn-group" role="group" aria-label="ClusterControl">
                         <a class="btn btn-default" href="{{ path('keyspaces', { 'cluster': cluster }) }}">Connect</a>
@@ -37,6 +37,10 @@
                         <div class="form-group">
                             <label for="port">Port</label>
                             <input type="number" class="form-control" name="port" id="port" value="9042">
+                        </div>
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" class="form-control" name="name" id="name" value="">
                         </div>
                         <div class="form-group">
                             <label for="version">Version</label>
